--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -53,6 +53,7 @@
 
   script:
     - SET Qt5_DIR=C:\Qt\5.12.6\msvc2017\lib\cmake
+    - SET PATH=%PATH%;C:\Qt\5.12.6\msvc2017\bin
     - IF EXIST build-desktop RMDIR /S /Q build-desktop
     - mkdir build-desktop
     - cd build-desktop
@@ -111,7 +112,7 @@ job-windows-vs2017-novideo:
 #################################################
 
 #Remove . when packaging process is ready to use
-.job-windows-vs2017-package:
+job-windows-vs2017-package:
   stage: package
   tags: [ "windows" ]
   dependencies:
@@ -120,42 +121,50 @@ job-windows-vs2017-novideo:
     variables:
       - $NIGHTLY_MASTER
       - $PACKAGE_RUN_WINDOWS
-
   script:
-    - cd build-desktop/OUTPUT
-    - IF EXIST deploy RMDIR /S /Q deploy
-    - mkdir deploy
-    - copy bin\linphone.exe deploy /Y
-    - xcopy ..\..\linphone-sdk\build-sdk\linphone-sdk\desktop\bin\*.dll deploy /C /Y
-    - xcopy ..\..\submodules\externals\minizip\build-minizip\OUTPUT\bin\*.dll deploy /C /Y
-    
-    
-    - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat"
+    - SET Qt5_DIR=C:\Qt\5.12.6\msvc2017\lib\cmake
+    - SET PATH=%PATH%;C:\Qt\5.12.6\msvc2017\bin
+    - IF EXIST build-desktop RMDIR /S /Q build-desktop
+    - mkdir build-desktop
     - cd build-desktop
-    - chdir > chdir_sdk.temp
-    - set /p OUTPUT_SDK_BUILD=<chdir_sdk.temp
-    - cd ..\cmake\Windows\wrapper\
-    - chdir > chdir_wrapper.temp
-    - set /p OUTPUT_WRAPPER_BUILD=<chdir_wrapper.temp
-    - msbuild -t:restore CsWrapper.csproj
-    - msbuild CsWrapper.csproj /p:MDILCompile=true /p:Platform="x86" /t:build /p:Configuration=Release /p:OutputSdkBuild=%OUTPUT_SDK_BUILD%
-    - cd ..\nuget
-    - git describe > describe.temp
-    - set /p DESCRIBE=<describe.temp
-    - msbuild NuGetLinphoneSDK.vcxproj /p:VersionNumber=%DESCRIBE% /p:OutputSdkBuild=%OUTPUT_SDK_BUILD% /p:OutputWrapperBuild=%OUTPUT_WRAPPER_BUILD%
+    - mkdir OUTPUT
+#SDK  Building
+    #we launch the msvc-cl wrapper located in python scripts folder
+    #this wrapper relays only needed calls to the real compiler    
+    #cache stats display
+    - C:\PROGRA~1\Python37\Scripts\cl -s    
+    - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
+    - cmake --build . --target ALL_BUILD --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
+# Minizip install to OUTPUT folder    
+    - cmake ..
+    - cmake --build . --target minizip
+    - cmake --build . --target install --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
+# Update CMake installation    
+    - cmake .. -G "Visual Studio 15 2017" -DCMAKE_BUILD_TYPE=Release %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
+    - cmake --build . --target linphone-qt --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
+    - cmake --build . --target package --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
+    - C:\PROGRA~1\Python37\Scripts\cl -s
+    - mkdir "%CI_PROJECT_DIR%/results/windows"
+    - cd CPackBuild
+    - copy /B *.exe "%CI_PROJECT_DIR%/results/windows"
     
-  after_script:
-    - mkdir "%CI_PROJECT_DIR%/results/windows-nugget"
-    - dir
-    - cd cmake/Windows/nuget/
-    - copy /B *.nupkg "%CI_PROJECT_DIR%/results/windows-nugget"
   artifacts:
     paths:
-      - results/*
-    when: always
-    expire_in: 1 week
+      - results\*
+    expire_in: 1 weeks
  
 
+job-windows-vs2017-win32-upload:
+  stage: deploy
+  tags: [ "windows"]
+  only:
+    variables:
+      - $DEPLOY_RUN_WINDOWS
+      - $NIGHTLY_MASTER
+  dependencies:
+    - job-windows-vs2017-package
+  script:
+    - scp results/* "%DEPLOY_SERVER%:%DEPLOY_SNAPSHOTS_ROOT_DIRECTORY%/windows/app/"
 
 
 
