--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -455,12 +455,12 @@ else()
 
         foreach (target ${TARGET_NAME})
             message("Available target : ${target}")
-    #	    install(TARGETS ${target}
-    #		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-    #		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    #		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    #		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
-    #		)
+            install(TARGETS ${target}
+                RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+                LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+                ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+                PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+    		)
         endforeach ()
 
         if (UNIX AND NOT APPLE)
